# Tilde

./: .drone.yml  .drone2.yml  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  contribute.md  deleteme.json  drone-setup-keys.js  pull_request_procedure.md  quick-start.md  roadmap.html  roadmap.md  tech-stack.dia
automarker_2/: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  build_docker_image.sh  check_project_configuration.py  config.nix  docker-compose.yml  manage.py  mark_learner_project.py  nix-rebuild-profile.sh  print_configuration.py  pyproject.toml  pytest.ini  shell.nix  test_project_configuration.py
automarker_2/ai_experiments/: README.md  long_form_text_marking.py
automarker_2/automarker/: automarker_test_runner.py  constants.py  exceptions.py  marker.py  step_sequences.py  steps.py  test_runner.py  utils.py
automarker_2/automarker_app/: api_views.py  apps.py  serializers.py
automarker_2/automarker_app/lib/: ai_helpers.py  automarker_test_runner.py  constants.py  marker.py  step_sequences.py  steps.py  utils.py
automarker_2/automarker_app/lib/tests/: test_AdapterCommandOutput__clean_tag_content.py  test_automarker_test_runner_JavaScriptTestRunner.py  test_automarker_test_runner_PythonTestRunner.py  (+2 more)
automarker_2/automarker_app/management/: utils.py
automarker_2/automarker_service/: asgi.py  settings.py  urls.py  wsgi.py
automarker_2/src/: ai_helpers.py  constants.py  exceptions.py  marker.py  steps.py  test_runner.py  utils.py
automarker_2/tests/: test_AdapterCommandOutput__clean_tag_content.py  test_marker.py
(+1441 files in other folders)
